--- a/.github/workflows/golangci.yml
+++ b/.github/workflows/golangci.yml
@@ -20,7 +20,9 @@ jobs:
     steps:
 
       - name: Install Go
-        uses: actions/setup-go@v1
+        uses: actions/setup-go@v2
+        with:
+          go-version: '^1.16.0' # The Go version to download (if necessary) and use.
 
       - name: go version
         run: go version
