--- a/.github/workflows/golangci.yml
+++ b/.github/workflows/golangci.yml
@@ -46,6 +46,9 @@ jobs:
       - name: Build DataTug CLI
         run: go build -mod=mod
 
+      - name: Pull new module version
+        uses: andrewslotin/go-proxy-pull-action@master
+
 #      - name: list root directory
 #        run: ls
 
