--- a/.github/workflows/golangci.yml
+++ b/.github/workflows/golangci.yml
@@ -27,9 +27,6 @@ jobs:
       - name: go version
         run: go version
 
-      - name: Checkout code
-        uses: actions/checkout@v2
-
       - uses: actions/cache@v2
         with:
           # In order:
@@ -46,8 +43,11 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-go-
 
-      - name: Pull new module version
-        uses: andrewslotin/go-proxy-pull-action@master
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+#      - name: Pull new module version
+#        uses: andrewslotin/go-proxy-pull-action@master
 
       - name: go get
         run: go get ./...
