--- a/.github/workflows/golangci.yml
+++ b/.github/workflows/golangci.yml
@@ -2,11 +2,15 @@ name: Test & Build
 
 on:
   push:
+    branches:
+      - main
     paths:
       - .github/workflows/**
       - go.*
       - '**.go'
   pull_request:
+    branches:
+      - main
     paths:
       - .github/workflows/**
       - go.*
