--- a/.github/workflows/golangci.yml
+++ b/.github/workflows/golangci.yml
@@ -1,95 +1,58 @@
-name: Test & Build
-
 on:
   push:
     branches:
       - main
-    paths:
-      - .github/workflows/**
-      - go.*
-      - '**.go'
   pull_request:
     branches:
       - main
-    paths:
-      - .github/workflows/**
-      - go.*
-      - '**.go'
-
+name: Vet, Test, Build
 jobs:
 
-  test_and_build:
-    name: Lint, vet, test, build
+  vet_build_test_lint:
     runs-on: ubuntu-latest
 
     steps:
-
-      - name: Install Go
-        uses: actions/setup-go@v3
-        with:
-          go-version: '^1.16.0' # The Go version to download (if necessary) and use.
-
-      - name: go version
-        run: go version
-
-      - uses: actions/cache@v3
-        with:
-          # In order:
-          # * Module download cache
-          # * Build cache (Linux)
-          # * Build cache (Mac)
-          # * Build cache (Windows)
-          path: |
-            ~/go/pkg/mod
-            ~/.cache/go-build
-            ~/Library/Caches/go-build
-            %LocalAppData%\go-build
-          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
-          restore-keys: |
-            ${{ runner.os }}-go-
-
       - name: Checkout code
         uses: actions/checkout@v3
 
-      #      - name: Pull new module version
-      #        uses: andrewslotin/go-proxy-pull-action@master
+      - name: Install Go
+        uses: actions/setup-go@v4
 
-      - name: go get
+      - name: Go get
         run: go get ./...
 
-      - name: go vet ./...
+      - name: Go vet
         run: go vet ./...
 
-      - name: go test ./...
+      - name: Go build
+        run: go build ./...
+
+      - name: Go test
         run: go test ./...
 
-      - name: Build DataTug CLI
-        run: go build -mod=mod
+      - name: Go lint
+        uses: golangci/golangci-lint-action@v3
+        with:
+          # Optional: version of golangci-lint to use in form of v1.2 or v1.2.3 or `latest` to use the latest version
+          version: latest
 
-#      - name: list root directory
-#        run: ls
+          args: --timeout=3m --print-issued-lines=true
 
-#  golangci:
-#    # We recommend running this action in a job separate from other jobs (go test, etc) because different jobs run in parallel.
-#    name: lint
-#    runs-on: ubuntu-latest
-#    steps:
-#      - uses: actions/checkout@v2
-#      - name: golangci-lint
-#        uses: golangci/golangci-lint-action@v2
-#        with:
-#          # Required: the version of golangci-lint is required and must be specified without patch version: we always use the latest patch version.
-#          version: v1.29
-#
-#          # Optional: working directory, useful for monorepos
-#          # working-directory: somedir
-#
-#          # Optional: golangci-lint command line arguments.
-#          # args: --issues-exit-code=0
-#
-#          # Optional: show only new issues if it's a pull request. The default value is `false`.
-#          # only-new-issues: true
-#
-#          # Optional: if set to true then the action will use pre-installed Go
-#          # skip-go-installation: true
-#
+          # Optional: working directory, useful for monorepos
+          # working-directory: somedir
+
+          # Optional: golangci-lint command line arguments.
+          # args: --issues-exit-code=0
+
+          # Optional: show only new issues if it's a pull request. The default value is `false`.
+          # only-new-issues: true
+
+          # Optional: if set to true then the all caching functionality will be complete disabled,
+          #           takes precedence over all other caching options.
+          # skip-cache: true
+
+          # Optional: if set to true then the action don't cache or restore ~/go/pkg.
+          skip-pkg-cache: true
+
+          # Optional: if set to true then the action don't cache or restore ~/.cache/go-build.
+          # skip-build-cache: true
