--- a/.github/workflows/golangci.yml
+++ b/.github/workflows/golangci.yml
@@ -4,11 +4,21 @@ on:
   push:
     branches-ignore:
       - renovate/**
+    paths:
+      - '.github/workflows/**.yml'
+      - 'src/**'
+      - 'go.*'
+      - '*.go'
     tags:
       - 'v[0-9]+\.[0-9]+\.[0-9]+' # Push events to matching v*, i.e. v20.15.10
   pull_request:
     branches:
       - '**'
+    paths:
+      - '.github/workflows/**.yml'
+      - 'src/**'
+      - 'go.*'
+      - '*.go'
 
 jobs:
 
