--- a/.github/workflows/golangci.yml
+++ b/.github/workflows/golangci.yml
@@ -5,20 +5,20 @@ on:
     branches-ignore:
       - renovate/**
     paths:
-      - '.github/workflows/**.yml'
-      - 'src/**'
       - 'go.*'
-      - '*.go'
+      - '**/*.go'
+      - 'src/**'
+      - '.github/workflows/*.yml'
     tags:
       - 'v[0-9]+\.[0-9]+\.[0-9]+' # Push events to matching v*, i.e. v20.15.10
   pull_request:
     branches:
       - '**'
     paths:
-      - '.github/workflows/**.yml'
-      - 'src/**'
       - 'go.*'
-      - '*.go'
+      - '**/*.go'
+      - 'src/**'
+      - '.github/workflows/*.yml'
 
 jobs:
 
